# dexquote

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/dexquote/: Cargo.toml
crates/dexquote-core/: Cargo.toml
crates/dexquote-core/src/: chain.rs  error.rs  gas.rs  lib.rs  quote.rs  token.rs  tokens_arbitrum.rs  tokens_base.rs  tokens_ethereum.rs  tokens_solana.rs
crates/dexquote-core/src/backends/: aerodrome.rs  aerodrome_slipstream.rs  balancer_v2.rs  camelot_v3.rs  cowswap.rs  curve.rs  dodo_v2.rs  fraxswap.rs  jupiter_swap.rs  jupiter_ultra.rs  kyberswap.rs  lifi.rs  lifi_solana.rs  maverick_v2.rs  mod.rs  odos.rs  openocean.rs  openocean_solana.rs  pancake_v3.rs  paraswap.rs  raydium.rs  trader_joe.rs  uniswap_v2.rs  uniswap_v2_canonical.rs  uniswap_v3.rs  uniswap_v4.rs
crates/dexquote-core/tests/: odos_live.rs  uniswap_v3_live.rs
crates/dexquote/src/: benchmark.rs  cli.rs  config.rs  depth.rs  doctor.rs  error.rs  history.rs  main.rs  route.rs  theme.rs
crates/dexquote/src/render/: benchmark.rs  depth.rs  json.rs  minimal.rs  mod.rs  route.rs  stream.rs  table.rs
crates/dexquote/src/tui/: app.rs  benchmark_stream.rs  depth_stream.rs  doctor_stream.rs  event.rs  gas_tracker.rs  mod.rs  quote_stream.rs  solana_gas_tracker.rs  ui.rs
