[workspace]
resolver = "2"
members = ["crates/dexquote-core", "crates/dexquote"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["dexquote contributors"]
repository = "https://github.com/dexquote/dexquote"
homepage = "https://github.com/dexquote/dexquote"
readme = "README.md"
rust-version = "1.80"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
eyre = "0.6"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
alloy = { version = "1", features = ["full"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
